--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"tailwindcss": "^3.1.5",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"mdsvex": "^0.10.6"
 	},
 	"type": "module",
 	"dependencies": {
